	  This is to reduce the liklehood of destroying a micro in C2 mode at the
	  next reconnect (only seemed to be a problem on C2).
	- updated ec2writeflash / ec2readflash to support >64k
	- Updated Max firmware versions to EC3 = 0x0c, EC2 = 0x14 as these seem good
	- Added Fixes for library files not including .so reported by Sean Collins.
	  http://sourceforge.net/forum/forum.php?thread_id=1668047&forum_id=499982
	- Detect and report presense of but lack of access rights to an EC3,
	  suggesting try as root or setup udev.
	- Add code to support F35x (Paged debug sfr's)
	  (general paged sfr support for c2 mode)

Henri Geist:
	- bugfix for ec2drv serial communications, to avoid missing part of the read
	  data when only a part of them has arrived at time of the read syscall
	  on the serial port.

Kolja Waschk:
	- EC2/3 Bootloader Read firmware function now fixed. (incorrect byte order
	  in address.
	- Routine to match the checksum/CRC that the EC2/3 calculated on a page of
	  memory.
	- Provided basic read debugger firmware utility.

Nebojša:
	- Allow compilation with GCC 4.1

Thomas Sailer:
	- Patch containing large number of warning fixes for GCC4

Marco Oesch:
	- Correct EC2 Firmware size for ec2rfw.c, also ensure entire debugger read
	  size set correctly.

Steve Brown:
	- Fix for EC3 not reading enough bytes causing following commands to return 
	  garbage.
	- Provided breakpoint registers for F320/1
	- Confirmed F320 ok with EC3 version 0x0d. (We now accept 0x0d as top version for EC3 firmware)
	- Identifed "copy&paste" stylebug involving debug option in writeflash.c.
	  The fix should make the option work as intended.

Frieder Ferlemann:
	- Identified several compile issues with newer GCC (Ricky added fixes for these)

Known issues:
	- If the device is locked reads from RAM and FLASH return 0x00 rather than
	  reporting an error

TODO:
	- choose correct clock and flash scale values for each processor.

